Update about me

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 <h3>
 <a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>About me</h3>
 
-<p>My name is Alvaro Tolentino
-I studied System Engineering.
-I'm studying a Master degree at PUCP in Computer Science
-I currently continue my research in Computer Vision.</p>
+<p>My name is Alvaro Tolentino</p>
+<p>I studied System Engineering.</p>
+<p>I'm studying a Master degree at PUCP in Computer Science</p>
+<p>I currently continue my research in Computer Vision.</p>
 
       <footer class="site-footer">
 
