--- a/force.html
+++ b/force.html
@@ -15,15 +15,17 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 <script>
 
-var width = 1700,
-    height = 1200;
+var width = 600,
+    height = 800;
 
 var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
 
 var force = d3.layout.force()
-    .size([width, height]);
+    .size([width, height])
+    .charge(-200)
+    .linkDistance(10);
 
 d3.csv("airLines.csv", function(error, links) {
   if (error) throw error;
