--- a/SpatialMap.html
+++ b/SpatialMap.html
@@ -22,6 +22,8 @@ html, body, #map {
   height: 20px;
   padding-right: 100px;
   font: 10px sans-serif;
+  font-weight: bold;
+  font-color: green;
 }
 
 .stations circle {
@@ -30,9 +32,6 @@ html, body, #map {
   stroke-width: 1.5px;
 }
 
-.stations text {
-  color: green;
-}
     </style>
   </head>
   <body>
