--- a/force.html
+++ b/force.html
@@ -2,15 +2,13 @@
 <meta charset="utf-8">
 <style>
 
-html, body, #map {
+html, body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
 }
-.marker {
-  position: absolute;
-}
+
 
 .link {
   stroke: #048ABF;
@@ -29,9 +27,9 @@ var width = 1700,
     height = 1200;
 
 var svg = d3.select("body").append("svg")
-    .attr("width", 100%)
-    .attr("height", 100%)
-    .attr("class", "marker");
+    .attr("width", '100%')
+    .attr("height", '100%')
+    .attr('viewBox','0 0 '+Math.min(width,height)+' '+Math.min(width,height));
 
 var force = d3.layout.force()
     .size([width, height])
