--- a/index.html
+++ b/index.html
@@ -89,14 +89,7 @@ layout: default
             <p>My name is Alvaro Tolentino</p>
             <p>I studied a Master Degree in Informatic with a major in Computer Science at <a href="http://www.pucp.edu.pe/">PUCP</a></p>
             <p>I currently continue my research in Computer Vision.</p>
-            <p>You can contact me by sending me a email at <script>document.write('<'+'a'+' '+'h'+'r'+'e'+'f'+'='+"'"+'m'+'a'+'&'+'#'+'1'+'0'+'5'+';'+'l'+'t'+'o'+'&'+'#'+'5'+'8'+';'+
-'a'+'%'+'6'+'C'+'&'+'#'+'1'+'1'+'8'+';'+'a'+'%'+'7'+'2'+'o'+'&'+'#'+'1'+'1'+'6'+';'+'&'+'#'+'3'+'7'+
-';'+'&'+'#'+'5'+'4'+';'+'F'+'l'+'&'+'#'+'1'+'0'+'1'+';'+'&'+'#'+'1'+'1'+'0'+';'+'t'+'%'+'&'+'#'+'5'+
-'4'+';'+'&'+'#'+'5'+'7'+';'+'n'+'%'+'&'+'#'+'5'+'4'+';'+'F'+'u'+'%'+'&'+'#'+'5'+'2'+';'+'0'+'g'+'m'+
-'a'+'i'+'l'+'&'+'#'+'4'+'6'+';'+'c'+'o'+'%'+'6'+'&'+'#'+'6'+'8'+';'+"'"+'>'+'a'+'l'+'&'+'#'+'1'+'1'+
-'8'+';'+'a'+'r'+'&'+'#'+'1'+'1'+'1'+';'+'t'+'&'+'#'+'1'+'1'+'1'+';'+'l'+'e'+'n'+'&'+'#'+'1'+'1'+'6'+
-';'+'i'+'&'+'#'+'1'+'1'+'0'+';'+'o'+'u'+'&'+'#'+'6'+'4'+';'+'&'+'#'+'1'+'0'+'3'+';'+'m'+'a'+'i'+'l'+
-'&'+'#'+'4'+'6'+';'+'c'+'o'+'m'+'<'+'/'+'a'+'>');</script></p>
+            <p>You can contact me by sending me a email at <a href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#97;&#108;&#118;&#97;&#114;&#111;&#95;&#116;&#111;&#108;&#101;&#110;&#116;&#105;&#110;&#111;&#64;&#121;&#97;&#104;&#111;&#111;&#46;&#101;&#115;'>&#97;&#108;&#118;&#97;&#114;&#111;&#95;&#116;&#111;&#108;&#101;&#110;&#116;&#105;&#110;&#111;&#64;&#121;&#97;&#104;&#111;&#111;&#46;&#101;&#115;</a></p>
           </div>
         </div>
       </div>
