--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ layout: default
             <p>My name is Alvaro Tolentino</p>
             <p>I studied a Master Degree in Informatic with a major in Computer Science at <a href="http://www.pucp.edu.pe/">PUCP</a></p>
             <p>I currently continue my research in Computer Vision.</p>
-            <p>You can contact me by sending me a email at <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#97;&#108;&#118;&#97;&#114;&#111;&#116;&#111;&#108;&#101;&#110;&#116;&#105;&#110;&#111;&#117;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#65;&#108;&#118;&#97;&#114;&#111;&#32;&#84;&#111;&#108;&#101;&#110;&#116;&#105;&#110;&#111;</a></p>
+            <p>You can contact me by sending me a email at <my-email data-user="alvarotolentinou" data-domain="gmail.com"></my-email></p>
           </div>
         </div>
       </div>
